syntax = "proto3";
import "google/api/annotations.proto";
//import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
package mp4;
option go_package="m7s.live/m7s/v5/plugin/mp4/pb";

service api {
  rpc List (ReqRecordList) returns (ResponseList) {
    option (google.api.http) = {
      get: "/mp4/api/list/{filePath=**}"
    };
  }
}

message ReqRecordList {
  string filePath = 1;
  string range = 2;
}

message RecordFile {
  uint32 id = 1;
  string filePath = 2;
  string streamPath = 3;
  google.protobuf.Timestamp startTime = 4;
  google.protobuf.Timestamp endTime = 5;
}

message ResponseList {
  int32 code = 1;
  string message = 2;
  repeated RecordFile data = 3;
}